// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button 1`] = `
<div style="display: flex; flex-direction: column; gap: var(--ds-size-4);">
  <div>
    <input
      aria-label="søk"
      placeholder
      type="search"
      value="Skole"
    >
    <button
      aria-label="Tøm"
      data-icon="true"
      data-variant="tertiary"
      type="reset"
    >
    </button>
    <button
      data-variant="primary"
      type="submit"
    >
      Søk
    </button>
  </div>
  <div style="display: flex; gap: var(--ds-size-2);">
    <p data-variant="default">
      Hurtigsøk:
    </p>
    <button type="button">
      Læreplaner
    </button>
    <button type="button">
      Skole
    </button>
    <button type="button">
      Eksamen
    </button>
  </div>
</div>
`;

exports[`Checkbox 1`] = `
<div style="display: flex; flex-direction: column; gap: var(--ds-size-4);">
  <p data-variant="default">
    Vis data for
  </p>
  <div style="display: flex; gap: var(--ds-size-1);">
    <label>
      <input
        aria-label="2020"
        type="checkbox"
      >
      2020
    </label>
    <label>
      <input
        aria-label="2021"
        type="checkbox"
      >
      2021
    </label>
    <label>
      <input
        aria-label="2022"
        type="checkbox"
      >
      2022
    </label>
    <label>
      <input
        aria-label="2023"
        type="checkbox"
      >
      2023
    </label>
    <label>
      <input
        aria-label="2024"
        type="checkbox"
      >
      2024
    </label>
    <label>
      <input
        aria-label="2025"
        type="checkbox"
      >
      2025
    </label>
  </div>
</div>
`;

exports[`Preview 1`] = `
<button
  name="my-button"
  type="button"
  value="button"
>
  Button
</button>
<label>
  <input
    name="my-checkbox"
    type="checkbox"
    value="checkbox"
  >
  Checkbox
</label>
<label>
  <input
    name="my-radio"
    type="radio"
    value="radio"
  >
  Radio
</label>
<button
  data-removable="true"
  name="my-removable"
  type="button"
  value="removable"
>
  Removable
</button>
`;

exports[`Radio 1`] = `
<div style="display: flex; flex-direction: column; gap: var(--ds-size-4);">
  <p data-variant="default">
    Vis data for
  </p>
  <div style="display: flex; gap: var(--ds-size-1);">
    <label>
      <input
        aria-label="Barnehage"
        name="my-radio"
        type="radio"
      >
      Barnehage
    </label>
    <label>
      <input
        aria-label="Grunnskole"
        name="my-radio"
        type="radio"
      >
      Grunnskole
    </label>
    <label>
      <input
        aria-label="Videregående"
        name="my-radio"
        type="radio"
      >
      Videregående
    </label>
  </div>
</div>
`;

exports[`Removable 1`] = `
<button
  aria-label="Slett Grunnskole"
  data-removable="true"
  type="button"
>
  Grunnskole
</button>
<button
  aria-label="Slett Videregående"
  data-removable="true"
  type="button"
>
  Videregående
</button>
`;
